--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <img class="firm-logo" src="firm-logo.png" alt="Firm Logo">
 
     <!-- vCard Links -->
-    <a id="vcard-link" class="vcard-link" href="personal1-vcard.html">View Personal 1's vCard</a>
+    <a id="vcard-link" class="vcard-link" href="/alikumbul">ALİ KUMBUL</a>
+    <a id="vcard-link" class="vcard-link" href="/erenyilmaz">S. EREN YILMAZ</a>
 </div>
 
 <script>
