--- a/index.html
+++ b/index.html
@@ -1,72 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>UTU Türkiye</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Century Gothic', sans-serif;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #001F3F;
+            /* Firma ana rengi */
+            color: #E0E0E0;
+            /* Yazı renginde kontrast */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            position: relative;
+            overflow: hidden;
         }
+
+        .background-logo {
+            position: absolute;
+            top: -200px;
+            left: -200px;
+            width: 1200px;
+            height: 1200px;
+            background-image: url('https://i.ibb.co/XLr6PMm/Beyaz-Sembol-PNG.png');
+            background-repeat: repeat;
+            background-size: 400px;
+            opacity: 0.1;
+            transform: rotate(45deg);
+            z-index: 0;
+        }
+
         .container {
             text-align: center;
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 100%;
+            position: relative;
+            z-index: 1;
         }
-        .firm-logo {
-            width: 150px;
-            margin-bottom: 20px;
+
+        h1 {
+            font-size: 2.5rem;
+            color: #E4BF47;
+            /* Firmanın birincil vurgusu */
+            margin-bottom: 30px;
         }
-        .vcard-link {
-            font-size: 20px;
-            color: #0073b1;
-            text-decoration: none;
-            display: block;
-            margin: 20px 0;
-            transition: opacity 0.5s ease-in-out;
+
+        .button-group {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
         }
-        .vcard-link:hover {
-            text-decoration: underline;
+
+        .btn {
+            background-color: #36454F;
+            /* Buton rengi */
+            color: #E0E0E0;
+            /* Buton yazı rengi */
+            padding: 15px 50px;
+            border: none;
+            border-radius: 15px;
+            text-transform: capitalize;
+            /* İlk harf büyük */
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn:hover {
+            background-color: #9DB17C;
+            /* Hover için renk değişikliği */
+            transform: scale(1.08);
+            box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .btn:active {
+            background-color: #E4BF47;
+            transform: scale(0.95);
         }
     </style>
 </head>
+
 <body>
-
-<div class="container">
-    <!-- Firm Logo -->
-    <img class="firm-logo" src="firm-logo.png" alt="Firm Logo">
-
-    <!-- vCard Links -->
-    <a id="vcard-link" class="vcard-link" href="/alikumbul">ALİ KUMBUL</a>
-    <a id="vcard-link" class="vcard-link" href="/erenyilmaz">S. EREN YILMAZ</a>
-</div>
-
-<script>
-    // Rotate between vCard links for Personal 1 and Personal 2
-    const vcardLink = document.getElementById('vcard-link');
-    let isPersonal1 = true;
-
-    setInterval(() => {
-        if (isPersonal1) {
-            vcardLink.textContent = "View Personal 2's vCard";
-            vcardLink.href = "personal2-vcard.html";
-        } else {
-            vcardLink.textContent = "View Personal 1's vCard";
-            vcardLink.href = "personal1-vcard.html";
-        }
-        isPersonal1 = !isPersonal1;
-    }, 5000); // Change every 5 seconds
-</script>
-
+    <div class="background-logo"></div>
+    <div class="container">
+        <h1>UTU Türkiye</h1>
+        <div class="button-group">
+            <a href="./alikumbul"><button class="btn">Ali kumbul</button></a>
+            <a href="./erenyilmaz"><button class="btn">S. eren yılmaz</button></a>
+        </div>
+    </div>
 </body>
+
 </html>
