--- a/alikumbul/index.html
+++ b/alikumbul/index.html
@@ -1,89 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vCard</title>
+    <title>Ali Kumbul - UTU Türkiye</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap');
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Century Gothic', sans-serif;
+        }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: #001F3F;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            position: relative;
+            overflow: hidden;
         }
-
-        .vcard {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .background-logo {
+            position: absolute;
+            top: -100px;
+            left: -100px;
+            width: 1000px;
+            height: 1000px;
+            background-image: url('https://i.ibb.co/XLr6PMm/Beyaz-Sembol-PNG.png');
+            background-repeat: no-repeat;
+            background-size: 300px;
+            background-position: center;
+            opacity: 0.07;
+            z-index: 0;
+        }
+        .container {
             text-align: center;
-            max-width: 300px;
-            width: 100%;
+            background-color: rgba(54, 69, 79, 0.8); /* Şeffaf arka plan kutusu */
+            padding: 30px;
+            border-radius: 20px;
+            z-index: 1;
         }
-
-        .vcard img {
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            margin-bottom: 20px;
-        }
-
-        .firm-logo {
+        .profile-photo {
             width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 30px;
+            border: 4px solid #E4BF47;
+        }
+        h1 {
+            font-size: 2rem;
+            color: #E4BF47; /* Vurgu rengi */
             margin-bottom: 20px;
         }
-
-        .vcard h2 {
-            margin-bottom: 10px;
-            font-size: 24px;
-            color: #333;
+        .button-group {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
         }
-
-        .vcard a {
-            display: block;
-            margin: 10px 0;
-            text-decoration: none;
-            color: #0073b1;
-            font-size: 16px;
+        .btn {
+            background-color: #36454F;
+            color: #E0E0E0;
+            padding: 15px;
+            border: none;
+            border-radius: 10px;
+            text-transform: uppercase;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-
-        .vcard a:hover {
-            text-decoration: underline;
+        .btn img {
+            margin-right: 10px;
+            width: 20px;
+            height: 20px;
+        }
+        .btn:hover {
+            background-color: #9DB17C;
+            transform: scale(1.05);
+        }
+        .btn:active {
+            background-color: #E4BF47;
+            transform: scale(0.98);
         }
     </style>
 </head>
-
 <body>
-
-    <div class="vcard">
-        <!-- User Photo -->
-        <img src="user-photo.jpg" alt="User Photo">
-
-        <!-- Firm Logo -->
-        <img class="firm-logo" src="firm-logo.png" alt="Firm Logo">
-
-        <!-- Name -->
-        <h2>John Doe</h2>
-
-        <!-- Telephone Number (Click to Call) -->
-        <a href="tel:+1234567890">+1 (234) 567-890</a>
-
-        <!-- Email (Click to Email) -->
-        <a href="mailto:john.doe@example.com">john.doe@example.com</a>
-
-        <!-- LinkedIn Profile -->
-        <a href="https://www.linkedin.com/in/johndoe" target="_blank">LinkedIn Profile</a>
-
-        <!-- Website Link -->
-        <a href="https://www.example.com" target="_blank">www.example.com</a>
+    <div class="background-logo"></div>
+    <div class="container">
+        <img src="https://via.placeholder.com/150" alt="Ali Kumbul" class="profile-photo">
+        <h1>Ali Kumbul</h1>
+        <div class="button-group">
+            <a href="mailto:ali@ututurkiye.com"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email Icon">ali@ututurkiye.com</button></a>
+            <a href="tel:+905555555555"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Phone Icon">+90 555 555 55 55</button></a>
+            <a href="https://www.linkedin.com/in/alikumbul" target="_blank"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon">linkedin.com/in/alikumbul</button></a>
+        </div>
     </div>
-
 </body>
-
 </html>
