--- a/alikumbul/index.html
+++ b/alikumbul/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ali Kumbul - UTU Türkiye</title>
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Century+Gothic:wght@700&display=swap');
+
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             font-family: 'Century Gothic', sans-serif;
         }
+
         body {
             background-color: #001F3F;
             display: flex;
@@ -21,26 +27,31 @@
             position: relative;
             overflow: hidden;
         }
+
         .background-logo {
             position: absolute;
-            top: -100px;
-            left: -100px;
-            width: 1000px;
-            height: 1000px;
+            top: -100vh;
+            left: -200vh;
+            width: 300%;
+            height: 300%;
             background-image: url('https://i.ibb.co/XLr6PMm/Beyaz-Sembol-PNG.png');
-            background-repeat: no-repeat;
-            background-size: 300px;
-            background-position: center;
-            opacity: 0.07;
+            background-repeat: repeat;
+            background-size: 400px;
+            opacity: 0.1;
+            transform: rotate(45deg);
             z-index: 0;
         }
+
         .container {
             text-align: center;
-            background-color: rgba(54, 69, 79, 0.8); /* Şeffaf arka plan kutusu */
+            background-color: rgba(54, 69, 79, 0.8);
+            /* Şeffaf arka plan kutusu */
             padding: 30px;
             border-radius: 20px;
             z-index: 1;
+            width: 300px;
         }
+
         .profile-photo {
             width: 150px;
             height: 150px;
@@ -48,16 +59,21 @@
             margin-bottom: 30px;
             border: 4px solid #E4BF47;
         }
+
         h1 {
             font-size: 2rem;
-            color: #E4BF47; /* Vurgu rengi */
+            color: #E4BF47;
+            /* Vurgu rengi */
             margin-bottom: 20px;
         }
+
         .button-group {
             display: flex;
             flex-direction: column;
             gap: 15px;
+            justify-content: center;
         }
+
         .btn {
             background-color: #36454F;
             color: #E0E0E0;
@@ -66,37 +82,46 @@
             border-radius: 10px;
             text-transform: uppercase;
             font-size: 1rem;
+            font-weight: bold;
             cursor: pointer;
             transition: transform 0.3s ease, background-color 0.3s ease;
             display: flex;
             align-items: center;
             justify-content: center;
+            gap: 10px;
+            text-decoration: none;
+            font-family: 'Century Gothic', sans-serif;
         }
-        .btn img {
-            margin-right: 10px;
-            width: 20px;
-            height: 20px;
+
+        .btn i {
+            font-size: 1.2rem;
         }
+
         .btn:hover {
             background-color: #9DB17C;
             transform: scale(1.05);
         }
+
         .btn:active {
             background-color: #E4BF47;
             transform: scale(0.98);
         }
     </style>
 </head>
+
 <body>
     <div class="background-logo"></div>
     <div class="container">
-        <img src="https://via.placeholder.com/150" alt="Ali Kumbul" class="profile-photo">
+        <img src="https://media.licdn.com/dms/image/v2/D4D03AQF2lVdOWfPb9Q/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1721424079853?e=1732752000&v=beta&t=y0RqCi6fM94Q7ZYXh3NkRmgcmM1bO7A8bhvpsK9cR3U"
+            alt="Ali Kumbul" class="profile-photo">
         <h1>Ali Kumbul</h1>
         <div class="button-group">
-            <a href="mailto:ali@ututurkiye.com"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email Icon">ali@ututurkiye.com</button></a>
-            <a href="tel:+905555555555"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Phone Icon">+90 555 555 55 55</button></a>
-            <a href="https://www.linkedin.com/in/alikumbul" target="_blank"><button class="btn"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon">linkedin.com/in/alikumbul</button></a>
+            <a href="mailto:ali@ututurkiye.com" class="btn"><i class="fas fa-envelope"></i>E-Posta</a>
+            <a href="tel:+905342020204" class="btn"><i class="fas fa-phone"></i>Telefon</a>
+            <a href="https://www.linkedin.com/in/alikumbul" target="_blank" class="btn"><i
+                    class="fab fa-linkedin"></i>LinkedIn</a>
         </div>
     </div>
 </body>
+
 </html>
