refactoring and split css

--- a/index.html
+++ b/index.html
@@ -4,92 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>UTU Türkiye</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Century+Gothic:wght@400&display=swap');
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Century Gothic', sans-serif;
-        }
-
-        body {
-            background-color: #001F3F;
-            /* Firma ana rengi */
-            color: #E0E0E0;
-            /* Yazı renginde kontrast */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .background-logo {
-            position: absolute;
-            top: -200px;
-            left: -100vh;
-            width: 300%;
-            height: 300%;
-            background-image: url('https://i.ibb.co/XLr6PMm/Beyaz-Sembol-PNG.png');
-            background-repeat: repeat;
-            background-size: 400px;
-            opacity: 0.1;
-            transform: rotate(45deg);
-            z-index: 0;
-        }
-
-        .container {
-            text-align: center;
-            position: relative;
-            z-index: 1;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            color: #E4BF47;
-            /* Firmanın birincil vurgusu */
-            margin-bottom: 30px;
-        }
-
-        .button-group {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-        }
-
-        .btn {
-            background-color: #36454F;
-            /* Buton rengi */
-            color: #E0E0E0;
-            /* Buton yazı rengi */
-            padding: 15px 50px;
-            border: none;
-            border-radius: 15px;
-            text-transform: capitalize;
-            /* İlk harf büyük */
-            font-size: 1.2rem;
-            cursor: pointer;
-            transition: transform 0.3s ease, background-color 0.3s ease;
-            box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .btn:hover {
-            background-color: #9DB17C;
-            /* Hover için renk değişikliği */
-            transform: scale(1.08);
-            box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        .btn:active {
-            background-color: #E4BF47;
-            transform: scale(0.95);
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
@@ -99,6 +16,9 @@
         <div class="button-group">
             <a href="./alikumbul"><button class="btn">Ali kumbul</button></a>
             <a href="./erenyilmaz"><button class="btn">S. eren yılmaz</button></a>
+        </div>
+        <div class="button-group">
+            <a href="https://ututurkiye.com" class="btn"><i class="custom-icon"></i>ututurkiye.com</a>
         </div>
     </div>
 </body>
