--- a/alikumbul/index.html
+++ b/alikumbul/index.html
@@ -16,6 +16,7 @@
         <img src="https://media.licdn.com/dms/image/v2/D4D03AQF2lVdOWfPb9Q/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1721424079853?e=1732752000&v=beta&t=y0RqCi6fM94Q7ZYXh3NkRmgcmM1bO7A8bhvpsK9cR3U"
             alt="Ali Kumbul" class="profile-photo">
         <h1>Ali Kumbul</h1>
+        <h2>Co-Founder</h2>
         <div class="button-group">
             <a href="mailto:ali@ututurkiye.com" class="btn"><i class="fas fa-envelope"></i>E-Posta</a>
             <a href="tel:+905342020204" class="btn"><i class="fas fa-phone"></i>Telefon</a>
