--- a/erenyilmaz/index.html
+++ b/erenyilmaz/index.html
@@ -16,6 +16,7 @@
         <img src="https://media.licdn.com/dms/image/v2/D4D03AQGoQuDan3L_Qw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1714056576485?e=1732752000&v=beta&t=_JIoTQn6-jB-irBixhbHI07-FhrMgZl6_DeoQlp_g-8"
             alt="S. Eren Yılmaz" class="profile-photo">
         <h1>S. Eren Yılmaz</h1>
+        <h2>Co-Founder</h2>
         <div class="button-group">
             <a href="mailto:eren@ututurkiye.com" class="btn"><i class="fas fa-envelope"></i>E-Posta</a>
             <a href="tel:+905364308966" class="btn"><i class="fas fa-phone"></i>Telefon</a>
