refactoring last touches

--- a/alikumbul/index.html
+++ b/alikumbul/index.html
@@ -22,7 +22,7 @@
             <a href="tel:+905342020204" class="btn"><i class="fas fa-phone"></i>Telefon</a>
             <a href="https://www.linkedin.com/in/alikumbul" target="_blank" class="btn"><i
                     class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://ututurkiye.com" class="btn"><i class="custom-icon"></i>ututurkiye.com</a>
+            <a href="https://ututurkiye.com" class="btn"><i class="custom-icon"></i>UtuTurkiye.com</a>
         </div>
     </div>
 </body>
