--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container">
         <h1>UTU Türkiye</h1>
         <div class="button-group">
-            <a href="./alikumbul"><button class="btn">Ali kumbul</button></a>
-            <a href="./erenyilmaz"><button class="btn">S. eren yılmaz</button></a>
+            <a href="./alikumbul"><button class="btn">Ali Kumbul</button></a>
+            <a href="./erenyilmaz"><button class="btn">S. Eren Yılmaz</button></a>
         </div>
         <div class="button-group">
-            <a href="https://ututurkiye.com" class="btn"><i class="custom-icon"></i>ututurkiye.com</a>
+            <a href="https://ututurkiye.com" class="btn"><i class="custom-icon"></i>UtuTurkiye.com</a>
         </div>
     </div>
 </body>
